Finished sign up for react

--- a/Back-End/views/log-in.pug
+++ b/Back-End/views/log-in.pug
@@ -1,6 +1,6 @@
 body
     div.loginPage__inner
-        h2.mainHeader Sign in to Medium
+        h2.mainHeader Sign in to IMDB Lite
         div.errDiv
         form.log-in-form
         label(for="userName") Username
@@ -9,5 +9,7 @@ body
         input(type="password" name="password" required)
         button(type="submit") Continue
         button.demoButton Demo Login
+
 script(src="/js/demo.js")
 script(src="/js/log-in.js")
+script(src="/js/index.js")
