--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -72,3 +72,33 @@ body {
 		left: 0;
 	}
 }
+
+.selectionContainer{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.selectionButton{
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+  font-size: 10px;
+  letter-spacing: 2px;
+  padding: 13px 40px;
+  text-transform: uppercase;
+  cursor: pointer;
+  display: inline-block;
+  margin-bottom: 10px;
+//   margin: 15px 30px;
+  -webkit-transition: all 0.4s;
+-moz-transition: all 0.4s;
+transition: all 0.4s;
+}
+.selectionButton:hover{
+  background-color: white;
+  color: black;
+  -webkit-transition: all 0.4s;
+-moz-transition: all 0.4s;
+transition: all 0.4s;
+}
