--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -300,6 +300,26 @@
   transform: scale(1);
 }
 
-.container-1-hover {
-  border: 10px solid white;
+.recommendedBox {
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+  background-color: transparent;
+  width: 320px;
+  font-weight: 700;
+  border-radius: 18px;
+  text-align: center;
+  cursor: pointer;
+}
+.recommendedBox:hover, .recommendedBox:focus, .recommendedBox:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
