--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -7,18 +7,28 @@ body {
 }
 
 /* Lightbox container */
+.blurrImg {
+	background-image: url("https://imdb-lite-movie-posters.s3.amazonaws.com/Movie-Info/Posters/y9Omn1Z7fCkivwlXewEzoXZAz3W.jpg");
+	filter: blur(8px);
+	-webkit-filter: blur(8px);
+	height: 100%;
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #container-1 {
 	// display: none;
 	width: 500px;
 	height: 200px;
 	margin: 40px auto 0 auto;
-	// background-image: url("https://imdb-lite-movie-posters.s3.amazonaws.com/Movie-Info/Posters/y9Omn1Z7fCkivwlXewEzoXZAz3W.jpg");
-	background-color: black;
+	// background-color: black;
 	color: white;
 	text-align: center;
 }
 
 #container-inner {
+	position: absolute;
 	font-weight: 700;
 	line-height: 200px;
 }
