This is the point where everything works good

--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .blurrImg {
-	background-image: url("https://imdb-lite-movie-posters.s3.amazonaws.com/Movie-Info/Posters/y9Omn1Z7fCkivwlXewEzoXZAz3W.jpg");
+	background-image: url("avengers.jpg");
 	filter: blur(8px);
 	-webkit-filter: blur(8px);
 	height: 100%;
