--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -26,11 +26,36 @@ body {
 .blurrImg {
 	background-image: url("avengers.jpg");
 	filter: blur(8px);
-	-webkit-filter: blur(8px);
+	-webkit-filter: blur(5px);
 	height: 100%;
 	background-position: center;
     background-repeat: no-repeat;
 	background-size: cover;
+}
+
+#fullscreenBlurr {
+	position: relative;
+	display: none;
+}
+
+#fullscreenImg {
+	position: absolute;
+	right: -647px;
+	height: 1900px;
+	width: 1300px;
+	bottom: -1110px;
+	filter: blur(5px);
+}
+
+#fullscreenDiv {
+	position: absolute;
+	overflow: scroll;
+	height: 600px;
+	width: 1225px;
+	bottom: -495px;
+	left: -613px;
+	background-color: black;
+	border-radius: 25px;
 }
 
 #container-1 {
@@ -58,19 +83,21 @@ body {
 #close {
 	position: absolute;
 	right: 20px;
-	top: 20px;
+	top: -80px;
 	cursor: pointer;
-	display: none;
 	margin-top: 100px;
 }
 
 #movie1 {
 	position: absolute;
-	left: 40px;
-	top: 50px;
-	cursor: pointer;
-	display: none;
-	margin-top: 100px;
+	height: 400px;
+	width: 320px;
+	top: 70px;
+	left: 20px
+	// position: absolute;
+	// left: 40px;
+	// top: 50px;
+	// margin-top: 100px;
 }
 
 .in-animation {
