--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -58,6 +58,14 @@ body {
 	border-radius: 25px;
 }
 
+#fullscreenTitle {
+	position: absolute;
+	top: 10px;
+	left: 460px;
+	border: 1px solid white;
+	padding: 5px;
+}
+
 #container-1 {
 	// display: none;
 	width: 500px;
@@ -94,10 +102,6 @@ body {
 	width: 320px;
 	top: 70px;
 	left: 20px
-	// position: absolute;
-	// left: 40px;
-	// top: 50px;
-	// margin-top: 100px;
 }
 
 .in-animation {
