Changed the title to be a button in fullscreenDiv

--- a/Front-End/src/index2.scss
+++ b/Front-End/src/index2.scss
@@ -54,9 +54,9 @@ body {
 #fullscreenTitle {
 	position: absolute;
 	top: 10px;
-	left: 460px;
-	border: 1px solid white;
-	padding: 5px;
+	left: 430px;
+	width: 400px;
+	text-align: center;
 }
 
 #container-1 {
