Finished movie preview

--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -25,6 +25,31 @@
   transform: scale(1.1);
 }
 
+.splashPage_cat {
+  display: inline-block;
+  /* margin: 0; */
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+  background-color: transparent;
+  width: 320px;
+  font-weight: 700;
+  border-radius: 18px;
+  text-align: center;
+  cursor: pointer;
+}
+.splashPage_cat:focus, .splashPage_cat:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  /* margin-right: 700px; */
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 .videoBox3 {
   display: inline-block;
   margin: 0;
